[doc] Fix broken CSS selector
[ci skip]

--- a/doc/src/css/components/_home-custom.scss
+++ b/doc/src/css/components/_home-custom.scss
@@ -40,7 +40,7 @@ $color-main-light: #F89C1D;
     font-size: 14pt;
     h2 {
         font-size: 24pt;
-        &::not(:first-child) {
+        &:not(:first-child) {
             margin-top: 2em;
         }
         margin-bottom: 1.5em;
